# spotify-playlist-agno

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api/: assistant_manager.py  dependencies.py  main.py  spoty_auth.py.bak
api/core/: __init__.py  config.py  exception_handlers.py  exceptions.py  logging.py  middleware.py
api/models/: __init__.py  requests.py  responses.py
api/routers/: __init__.py  auth.py  chat.py
api/services/: __init__.py  assistant.py  spotify.py
spotify_playlist/: spotify_assistant copy.py  spotify_assistant.py  spotify_toolkit.py  tasks.py
spoty_playlist_api/: log.py  main.py  music_lover_assistant.py  spoty_auth.py  spoty_auth_bot.py
static/: auth_success.html  index2.html  index3.html
telegram-bot/: music_lover_bot.py
